use the jlink plugin